# sem4

./: .gitignore  pyproject.toml
js_l/: blob_detection.py  uav.py
js_l/list_2/: lab_2.py  lab_3_a.py  lab_3_b.py  lab_3_c.py  lab_3_d.py  lab_3_e.py  lab_3_f.py  lab_3_g.py  lab_3_h.py  tmp.txt
js_l/list_3/: entry_to_dict.py  functions.py  get_addrs.py  get_entires_by_extension.py  get_entries_by_addr.py  get_entries_by_code.py  get_failed_reads.py  getters.py  list_and_tuples.py  log_to_dict.py  print_dict_entry_dates.py  print_entries.py  read_log.py  sort_log.py
js_l/list_4/: 1.txt  2.txt  3.txt  analise_file  analise_file.cpp  backup.py  print_env.py  print_path.py  read_files.py  restore.py  tail.py  tmp.txt
js_l/list_5/: main.py  setup_logging.py  ssh_class.py  ssh_utils.py  tmp.py  typer_cui.py
js_l/list_6/: main.py  sshlogentry.py  sshlogjournal.py  sshuser.py  utils.py
js_l/list_7/: generators.py  higherorder.py  main.py  nonimperative.py  password.py
js_l/list_8/: NASA  app.py  frames.py  main.py  tmp.py  utils.py
js_l/list_9/: main.py  mypy.ini  sshlogentry.py  sshlogjournal.py  sshuser.py  test_sshlog.py
js_l/modules/: color_detection.py  pyproject.toml  r.txt
msid_l/list_1/: 1_podstawowe_narzedzia.ipynb  plotting_figure.py  test_file.aux  test_file.fdb_latexmk  test_file.fls  test_file.out  test_file.tex
msid_l/list_2/: 2_obsluga_danych_i_obliczen.ipynb  task.py
msid_l/list_3/: 3_metoda_najmniejszych_kwadratow.ipynb  answer.txt  lss.py  test_lss.py
msid_l/list_4/: 4_klasyfikacja.ipynb  classification.py  test_classification.py
(+7 files in other folders)
